--- a/i18n/ja.yml
+++ b/i18n/ja.yml
@@ -1,2 +1,16 @@
 required_html_tags: HTMLタグを入力して下さい。
 invalid_doctype: DOCTYPEが不正です。
+makes_your_html_surce_beautifully_indneted: HTMLのインデントを綺麗にするサービス
+paste_your_mess_html_source_here: ここにインデントを綺麗にそろえたいHTMLをコピペ
+paste_here: "&lt;p&gt;ここにHTMLをコピペ&lt;/p&gt;"
+usage: Ham Cutletの使い方
+copy_a_html_document_and_paste_it_here: ここにHTMLをコピペします。
+click_the_cook_tab: コピペしたら「COOK!」をクリック。
+get_a_beautified_html_document: インデントが綺麗になったHTMLをゲット！
+to_file_a_bug_or_suggest_a_new_fueature: バグ報告・機能追加のご依頼
+register_a_bug_or_request_in_help_me_hackers: <a href="%1">Help me, hackers!</a>にバグ、要望を登録してください
+click_the_option_tab_and_choose_hamcutlet_when_you_register_a_project: 登録する際にオプションお開き、プロジェクトに「<a href="%1">Hamcutlet</a>」を選択。
+hamcutlet_is_using_haml: Ham CutletはHamlを使っています。
+html_has_some_problems: HTMLに問題あります。
+back_to_top: トップページに戻る
+beautiful_html_was_made: インデントの美しいHTMLが出来ました。
