--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -14,3 +14,4 @@ hamcutlet_is_using_haml: Ham Cutlet is using Haml
 html_has_some_problems: HTML has some problems.
 back_to_top: Back to Home
 beautiful_html_was_made: Beautiful AAA was made.
+select_a_html: Select a HTML
