localize text chrome extension

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -15,3 +15,4 @@ html_has_some_problems: HTML has some problems.
 back_to_top: Back to Home
 beautiful_html_was_made: Beautiful AAA was made.
 select_a_html: Select a HTML
+chrome_extension_for_hamcutlet: Chrome Extension for Ham Cutlet
