--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -1,3 +1,4 @@
+ham_cutlet: Ham Cutlet
 required_html_tags: HTML Tags required.
 invalid_doctype: Invalid DOCTYPE.
 makes_your_html_surce_beautifully_indneted: Makes your HTML source beautifully indented
